--- a/styles/utilities/_variables.scss
+++ b/styles/utilities/_variables.scss
@@ -1,18 +1,18 @@
-$fontStack: 'Open Sans', sans-serif;
+$fontStack: "Open Sans", sans-serif;
 
 $primaryColor: #422755;
-$secondaryColor: #FEAF3D;
+$secondaryColor: #feaf3d;
 
-$buttonColor:#6E4B87;
-$bgColor: #E5E5E5;
+$buttonColor: #6e4b87;
+$bgColor: #e5e5e5;
 
-$deadlineColor: #F04837;
+$deadlineColor: #f04837;
 
-$textColor: #FFFFFF;
-$textInputColor: #757575; 
+$textColor: #ffffff;
+$textInputColor: #757575;
 
 $borderCard: #000000;
 $titleCard: #414141;
 $buttonCard: #422755;
 
-$showMoreColor: #6E4B87;
+$showMoreColor: #6e4b87;
