--- a/styles/components/_cardTask.scss
+++ b/styles/components/_cardTask.scss
@@ -5,7 +5,6 @@
   background: $textColor;
   border: 0.1rem solid $borderCard;
   border-radius: 1rem;
-  position: relative;
   padding: 1rem;
   width: 100%;
   margin-bottom: 2rem;
@@ -28,7 +27,6 @@
     flex-direction: column;
     justify-content: space-between;
     padding-left: 1rem;
-    transition: 0.4s ease;
 
     &--mobile {
       width: 20px;
@@ -39,20 +37,17 @@
     }
 
     &--title {
-      font-size: 1.4rem;
+      @include textStyle(1.4rem, 700, left);
       color: $titleCard;
-      font-weight: 700;
     }
 
     &--desc {
       color: $borderCard;
-      font-size: 1.2rem;
-      font-weight: 400;
+      @include textStyle(1.2rem, 400, left);
     }
 
     &--deadline {
-      font-size: 1.3rem;
-      font-weight: 700;
+      @include textStyle(1.3rem, 700, left);
       padding: 1rem 0;
       span {
         color: $deadlineColor;
@@ -71,8 +66,7 @@
       border: 0.1rem solid $buttonCard;
       border-radius: 0.7rem;
       padding: 0.5rem;
-      font-size: 1.6rem;
-      font-weight: 700;
+      font: 1.6rem 700;
     }
 
     &--data {
@@ -91,14 +85,12 @@
 
     &--done,
     &--change {
+      @include textStyle(1.6rem, 700);
       display: inline;
       color: $textColor;
       border: 0;
       padding: 1rem;
-      font-size: 1.6rem;
-      font-weight: 700;
       border-radius: 1rem;
-      cursor: pointer;
       width: 100%;
       max-width: 21.8rem;
       img {
@@ -129,7 +121,7 @@
     margin: 1rem auto;
     min-height: 26rem;
     max-width: 25.3rem;
-    width: 23%;
+    width: 23.3%;
 
     position: relative;
 
@@ -141,7 +133,6 @@
 
       .cardTask__buttons {
         display: block;
-        transition: top 0.4s ease;
         z-index: 10;
         top: 94%;
         box-shadow: 1px 5px 6px 0px #00000040;
@@ -167,7 +158,8 @@
       max-width: 100%;
       min-height: 15rem;
 
-      &--button, &--mobile{
+      &--button,
+      &--mobile {
         display: none;
       }
 
