--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@
 
 @import "./components/cardTask";
 @import "./components/deadlineTags";
+@import "./components/scrollBar";
 
 @import "./mobileFirst";
 
