--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -31,10 +31,8 @@
 @media screen and (min-width: 1024px) {
   .header {
     &__title {
-      text-align: center;
+      @include textStyle(2.4rem, 800);
       width: 100%;
-      font-size: 2.4rem;
-      font-weight: 800;
       padding: 6.5rem;
 
       background: linear-gradient(
@@ -57,7 +55,6 @@
 
     &__form {
       justify-content: space-evenly;
-      max-width: 1081px;
       padding: 0 10rem;
 
       &--input {
