--- a/styles/main.css
+++ b/styles/main.css
@@ -605,10 +605,11 @@
 
 @media screen and (min-width: 1024px) {
   .header__title {
-    text-align: center;
-    width: 100%;
     font-size: 2.4rem;
     font-weight: 800;
+    text-align: center;
+    font-family: "Open Sans";
+    width: 100%;
     padding: 6.5rem;
     background: linear-gradient(182deg, #422755, #422755 80%, #ffffff calc(80% + 1px), #ffffff 100%);
   }
@@ -623,7 +624,6 @@
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
-    max-width: 1081px;
     padding: 0 10rem;
   }
   .header__form--input {
